2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: CipherModeを表す変数のアクセサを変更

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmPlus.cs: 実装タイプの初期値を設定

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmPlus.cs: 指定された実装タイプを保持しているか確認するメソッドを追加

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CipherImplementationType.cs: 勉強用実装を一覧に追加
	* SourceFiles, Makefile: Rijndaelテストケースを追加

2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: 各種ブロックモード(ECB, CBC, CFB, OFB, CTR)を実装

2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: コンストラクタでIVをとるようにインターフェイスを変更

2006-12-18 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: TransformBlockで入力データにオフセットが指定されていると
	正しく変換できないバグを修正
	* Helper.cs: Tests/BlockCipherModeTest.csから利用するテスト用メソッドを追加

2006-12-17 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SourceFiles, openCrypto.NET.mdp, openCrypto.NET.csproj: 更新

2006-12-11 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Makefile, SourceFiles: 更新時のみのビルドに対応
	* openCrypto.NET.mdp, openCrypto.NET.csproj: 更新

2006-12-10 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Makefile:
	- うまく動作しないディレクトリ生成ルールを削除
	- NUnitテストの実行ルールを追加

2006-12-03 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* openCrypto.NET.mdp:
	* openCrypto.NET.mds: MonoDevelop用のソリューション／プロジェクトファイルを追加
	* Makefile: 追加

2006-11-28 Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Helpers.cs: 追加

2006-11-27 Kazuki Oikawa  <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>
